<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >

    <include layout="@layout/add_alarm_toolbar" />

    <ScrollView


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:context=".activities.AddAlarmActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/sunModeSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height"
                    android:text="Sun mode"
                    android:textColor="#000000"
                    android:textSize="@dimen/add_alarm_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/medium_height"
                    android:layout_marginLeft="@dimen/default_margin"
                    android:gravity="center_vertical"
                    android:text="@string/location"
                    android:textColor="#000000"
                    android:textSize="@dimen/add_alarm_text_size" />

                <RadioGroup
                    android:id="@+id/radioSunMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin">

                    <RadioButton
                        android:id="@+id/radioSunrise"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/medium_height"

                        android:layoutDirection="rtl"
                        android:text="@string/sunrise"
                        android:textSize="@dimen/add_alarm_text_size" />

                    <RadioButton
                        android:id="@+id/radioSunset"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/medium_height"
                        android:layoutDirection="rtl"
                        android:text="@string/sunset"
                        android:textSize="@dimen/add_alarm_text_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />
                </RadioGroup>

                <TextView
                    android:id="@+id/timeView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height"
                    android:gravity="center_vertical"
                    android:text="Time"
                    android:textColor="#000000"
                    android:textSize="@dimen/add_alarm_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/timeMinus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/zoom_out"
                        android:textAlignment="gravity" />

                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="160dp"
                        android:timePickerMode="spinner" />

                    <ImageButton
                        android:id="@+id/timePlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/zoom_in" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/onceCheck"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height"
                    android:layoutDirection="rtl"
                    android:text="Once"
                    android:textSize="@dimen/add_alarm_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <Switch
                    android:id="@+id/alarmSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height"
                    android:text="On/Off"
                    android:textSize="@dimen/add_alarm_text_size" />


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>