<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.EditAlarmActivity"
    >

    <include layout="@layout/add_alarm_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:orientation="vertical">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/btn_location"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/medium_height"
                    android:gravity="center_vertical"
                    android:text="@string/location"
                    android:textColor="#000000"
                    android:textSize="@dimen/add_alarm_text_size"
                    android:visibility="gone" />

                <RadioGroup
                    android:id="@+id/radioSunMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/radio_padding"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/radioSunrise"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/medium_height"

                        android:layoutDirection="rtl"
                        android:text="@string/sunrise"
                        android:textSize="@dimen/add_alarm_text_size" />
                    <RadioButton
                        android:id="@+id/radioNoon"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/medium_height"

                        android:layoutDirection="rtl"
                        android:text="@string/noon"
                        android:textSize="@dimen/add_alarm_text_size" />

                    <RadioButton
                        android:id="@+id/radioSunset"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/medium_height"
                        android:layoutDirection="rtl"
                        android:text="@string/sunset"
                        android:textSize="@dimen/add_alarm_text_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />
                </RadioGroup>

                <TextView
                    android:id="@+id/timeView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height"
                    android:gravity="center_vertical"
                    android:text="Time"
                    android:textColor="#000000"
                    android:textSize="@dimen/add_alarm_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="160dp"
                        android:timePickerMode="spinner" />

                    <com.siarhei.alarmus.views.DelayPicker
                        android:id="@+id/delay_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:marqueeRepeatLimit="-1"
                        android:textSize="@dimen/delay_picker_size"
                        android:visibility="gone" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <CheckBox
                    android:id="@+id/repeatCheck"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height"
                    android:layoutDirection="rtl"
                    android:text="Repeat"
                    android:textSize="@dimen/add_alarm_text_size" />
                <LinearLayout
                    android:id="@+id/view_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.siarhei.alarmus.views.CircleCheckBox
                        android:id="@+id/check_day1"
                        android:layout_width="@dimen/text_check_size"
                        android:layout_height="@dimen/text_check_size"
                        android:layout_margin="@dimen/text_check_margin"
                        android:text="M" />

                    <com.siarhei.alarmus.views.CircleCheckBox
                        android:id="@+id/check_day2"
                        android:layout_width="@dimen/text_check_size"
                        android:layout_height="@dimen/text_check_size"
                        android:layout_margin="@dimen/text_check_margin"
                        android:text="T" />

                    <com.siarhei.alarmus.views.CircleCheckBox
                        android:id="@+id/check_day3"
                        android:layout_width="@dimen/text_check_size"
                        android:layout_height="@dimen/text_check_size"
                        android:layout_margin="@dimen/text_check_margin"
                        android:text="W" />

                    <com.siarhei.alarmus.views.CircleCheckBox
                        android:id="@+id/check_day4"
                        android:layout_width="@dimen/text_check_size"
                        android:layout_height="@dimen/text_check_size"
                        android:layout_margin="@dimen/text_check_margin"
                        android:text="T" />

                    <com.siarhei.alarmus.views.CircleCheckBox
                        android:id="@+id/check_day5"
                        android:layout_width="@dimen/text_check_size"
                        android:layout_height="@dimen/text_check_size"
                        android:layout_margin="@dimen/text_check_margin"
                        android:text="F" />

                    <com.siarhei.alarmus.views.CircleCheckBox
                        android:id="@+id/check_day6"
                        android:layout_width="@dimen/text_check_size"
                        android:layout_height="@dimen/text_check_size"
                        android:layout_margin="@dimen/text_check_margin"
                        android:text="S" />

                    <com.siarhei.alarmus.views.CircleCheckBox
                        android:id="@+id/check_day7"
                        android:layout_width="@dimen/text_check_size"
                        android:layout_height="@dimen/text_check_size"
                        android:layout_margin="@dimen/text_check_margin"
                        android:text="S"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider" />

                <Switch
                    android:id="@+id/alarmSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height"
                    android:text="On/Off"
                    android:textSize="@dimen/add_alarm_text_size" />



            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>